refactored feedback